add category page

--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#">Construction Toy </a>
+                                                    <a class="dropdown-item" href="construction.html">Construction Toy </a>
                                                 </li>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#"> Board Game</a>
+                                                    <a class="dropdown-item" href="board_game.html"> Board Game</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#">Musical Toy</a>
+                                                    <a class="dropdown-item" href="musical_toy.html">Musical Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
