--- a/products.html
+++ b/products.html
@@ -23,7 +23,7 @@
         </div>
     </section>
     <!-- top-header start -->
-    <!-- Header start -->
+   <!-- Header start -->
     <header class="sticky-top bg-white">
         <div class="container-fluid">
             <div class="row">
@@ -54,14 +54,12 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="educational.html"> Educational
-                                                        Toy</a>
+                                                    <a class="dropdown-item" href="educational.html"> Educational Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="construction.html">Construction Toy
-                                                    </a>
+                                                    <a class="dropdown-item" href="construction.html">Construction Toy </a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -185,10 +183,10 @@
         </div>
         <div class="offcanvas-body">
             <ul class="nav-item list-unstyled mb-0">
-                <li><a href="#">Educational Toy</a> </li>
-                <li><a href="#">Construction Toy</a></li>
-                <li><a href="#">Board Game</a></li>
-                <li><a href="#">Musical Toy</a></li>
+                <li><a href="educational.html">Educational Toy</a> </li>
+                <li><a href="construction.html">Construction Toy</a></li>
+                <li><a href="board_game.html">Board Game</a></li>
+                <li><a href="musical_toy.html">Musical Toy</a></li>
                 <li><a href="#">Puzzle Game</a></li>
                 <li><a href="#">Building Blocks</a></li>
                 <li><a href="#">Sports Toy</a></li>
