--- a/educational.html
+++ b/educational.html
@@ -203,7 +203,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h2 class="pt-5"><b>Educational Toyss</b></h2>
+                    <h2 class="pt-5"><b>Educational Toys</b></h2>
                     <img src="./assets/img/education/education_1.webp" alt="education_1" class="img-fluid">
                 </div>
                 <div class="col-md-6 px-5 pt-5">
