--- a/board_game.html
+++ b/board_game.html
@@ -54,12 +54,14 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="educational.html"> Educational Toy</a>
+                                                    <a class="dropdown-item" href="educational.html"> Educational
+                                                        Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="construction.html">Construction Toy </a>
+                                                    <a class="dropdown-item" href="construction.html">Construction Toy
+                                                    </a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -78,36 +80,36 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#"> Puzzle Game </a>
+                                                    <a class="dropdown-item" href="puzzle.html"> Puzzle Game </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#"> Building Blocks </a>
-                                                </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="#"> Sports Toy </a>
-                                                </li>
-                                            </td>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="#"> Creative Toy </a>
+                                                    <a class="dropdown-item" href="building.html"> Building Blocks </a>
                                                 </li>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#"> Baby Toy</a>
+                                                    <a class="dropdown-item" href="sports_toy.html"> Sports Toy </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#">Outdoor Toy</a>
+                                                    <a class="dropdown-item" href="creative_toy.html"> Creative Toy </a>
+                                                </li>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="baby_toy.html"> Baby Toy</a>
+                                                </li>
+                                            </td>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="outdoor_toy.html">Outdoor Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -115,9 +117,9 @@
                                 </table>
                             </ul>
                         </li>
-                        <li class="nav-item"><a href="#" class="nav-link">Birthday Gifts</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Corporate Gifts</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
+                        <li class="nav-item"><a href="birthday.html" class="nav-link">Birthday Gifts</a></li>
+                        <li class="nav-item"><a href="corporate.html" class="nav-link">Corporate Gifts</a></li>
+                        <li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-auto ms-lg-auto mx-auto">
@@ -157,9 +159,9 @@
                     </a>
                 </li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="#">Birthday Gifts</a></li>
-                <li><a href="#">Corporate Gifts</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="birthday.html">Birthday Gifts</a></li>
+                <li><a href="corporate.html">Corporate Gifts</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
     </div>
@@ -187,17 +189,16 @@
                 <li><a href="construction.html">Construction Toy</a></li>
                 <li><a href="board_game.html">Board Game</a></li>
                 <li><a href="musical_toy.html">Musical Toy</a></li>
-                <li><a href="#">Puzzle Game</a></li>
-                <li><a href="#">Building Blocks</a></li>
-                <li><a href="#">Sports Toy</a></li>
-                <li><a href="#">Creative Toy</a></li>
-                <li><a href="#">Baby Toy</a></li>
-                <li><a href="#">Outdoor Toy</a></li>
+                <li><a href="puzzle.html">Puzzle Game</a></li>
+                <li><a href="building.html">Building Blocks</a></li>
+                <li><a href="sports_toy.html">Sports Toy</a></li>
+                <li><a href="creative_toy.html">Creative Toy</a></li>
+                <li><a href="baby_toy.html">Baby Toy</a></li>
+                <li><a href="outdoor_toy.html">Outdoor Toy</a></li>
             </ul>
         </div>
     </div>
     <!-- offcanvas section end -->
-
     <!-- Festive Swag Basket start -->
     <section class="festive">
         <div class="container">
