--- a/puzzle.html
+++ b/puzzle.html
@@ -43,7 +43,7 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link" href="about_us.html">About Us</a>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="products.html">Toys & Games
                                 <i class="fa-solid fa-caret-down"></i>
@@ -149,7 +149,7 @@
         <div class="offcanvas-body">
             <ul class="nav-item list-unstyled mb-0">
                 <li><a href="index.html">Home</a> </li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="about_us.html">About Us</a></li>
                 <li><a href="#" class="d-flex justify-content-between" role="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasDropdown" aria-controls="offcanvasDropdown">
                         <span>Toys & Games</span>
