--- a/about_us.html
+++ b/about_us.html
@@ -119,7 +119,6 @@
                         </li>
                         <li class="nav-item"><a href="birthday.html" class="nav-link">Birthday Gifts</a></li>
                         <li class="nav-item"><a href="corporate.html" class="nav-link">Corporate Gifts</a></li>
-                        <li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-auto ms-lg-auto mx-auto">
@@ -161,7 +160,6 @@
                 <li><a href="products.html">Products</a></li>
                 <li><a href="birthday.html">Birthday Gifts</a></li>
                 <li><a href="corporate.html">Corporate Gifts</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
     </div>
@@ -263,14 +261,46 @@
     <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4 pt-4 pb-4">
+                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                            class="img-fluid pb-4"></a><br>
+                            <i class="text-light">Shipra is your one-stop destination for high-quality products across categories like toys, home essentials, educational tools, and more. We are committed to offering a seamless shopping experience, combining reliability, affordability, and variety. you're a parent looking for smart toys, a reseller searching for bulk deals, or a gift-giver seeking something unique, Shipra delivers trusted quality and unmatched service right to your doorstep. </i><br>
+                           
+                </div>
+                <div class="col-md-4 px-5 pt-4 pb-4">
+                    <div class="contact-form">
+                        <h2><a href="products.html">Toys & Games</a></h2>
+                        <ul class="list-unstyled">
+                            <li class="mb-1"><a href="educational.html">Educational Toy</a></li>
+
+                            <li class="mb-1"><a href="construction.html">Construction Toy</a></li>
+
+                            <li class="mb-1"><a href="board_game.html"> Board Game</a></li>
+
+                            <li class="mb-1"> <a href="musical_toy.html">Musical Toy</a> </li>
+
+                            <li class="mb-1"> <a href="puzzle.html"> Puzzle Game </a> </li>
+
+                            <li class="mb-1"> <a href="building.html"> Building Blocks </a> </li>
+
+                            <li class="mb-1"><a href="sports_toy.html"> Sports Toy </a> </li>
+
+                            <li class="mb-1"> <a href="creative_toy.html"> Creative Toy </a></li>
+
+                            <li class="mb-1"> <a href="baby_toy.html"> Baby Toy</a></li>
+
+                            <li> <a href="outdoor_toy.html">Outdoor Toy</a> </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4 pt-4 pb-4">
                     <h2>Contact Us</h2>
                     <div class="d-flex">
                         <div class="pt-1">
                             <i class="fa-solid fa-location-dot contact-logo"></i>
                         </div>
                         <div class="px-3">
-                            <span>Mumbai, Delhi, Rajkot</span><br>
+                            <span>Mumbai, Noida , Rajkot , Surat</span><br>
                             <a href="#"> <span>Get Directions</span>
                                 <i class="fa-solid fa-right-long text-white"></i></a>
                         </div>
@@ -311,23 +341,10 @@
                         <span class="contact-socialMediaIcon"><a href="#"><i
                                     class="fa-brands fa-instagram"></i></a></span>
                     </div>
+
                 </div>
-                <div class="col-md-6 ">
-                    <div class="contact-form">
-                        <div class="contact-message position-relative">
-                            <label for="message">Describe Your Requirement</label>
-                            <textarea class="form-control p-4" name="message" id="message"
-                                placeholder='I would like to...'></textarea>
-                        </div>
-                        <button class="button mt-3">
-                            <h6 class="fw-bold mb-0 px-5 py-2">
-                                <a href="#">
-                                    Submit
-                                </a>
-                            </h6>
-                        </button>
-                    </div>
-                </div>
+                 <hr class="text-light">
+                <i class="text-center text-light"><b>© Shopping Crafts. All rights reserved</b> sab page ke footer mein ..</i>
             </div>
         </div>
     </section>
