--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
                         </li>
                         <li class="nav-item"><a href="birthday.html" class="nav-link">Birthday Gifts</a></li>
                         <li class="nav-item"><a href="corporate.html" class="nav-link">Corporate Gifts</a></li>
-                        <li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-auto ms-lg-auto mx-auto">
@@ -161,7 +160,6 @@
                 <li><a href="products.html">Products</a></li>
                 <li><a href="birthday.html">Birthday Gifts</a></li>
                 <li><a href="corporate.html">Corporate Gifts</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
     </div>
@@ -593,13 +591,13 @@
     <section class="contact">
         <div class="container-fluid px-5">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 pt-4 pb-4">
                     <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
-                            class="img-fluid pb-5"></a><br>
+                            class="img-fluid pb-4"></a><br>
                             <i class="text-light">Shipra is your one-stop destination for high-quality products across categories like toys, home essentials, educational tools, and more. We are committed to offering a seamless shopping experience, combining reliability, affordability, and variety. you're a parent looking for smart toys, a reseller searching for bulk deals, or a gift-giver seeking something unique, Shipra delivers trusted quality and unmatched service right to your doorstep. </i><br>
                            
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-4 px-5 pt-4 pb-4">
                     <div class="contact-form">
                         <h2><a href="products.html">Toys & Games</a></h2>
                         <ul class="list-unstyled">
@@ -625,7 +623,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 pt-4 pb-4">
                     <h2>Contact Us</h2>
                     <div class="d-flex">
                         <div class="pt-1">
@@ -675,6 +673,8 @@
                     </div>
 
                 </div>
+                <hr class="text-light">
+                <i class="text-center text-light"><b>© Shopping Crafts. All rights reserved</b> sab page ke footer mein ..</i>
             </div>
         </div>
     </section>
