add this sport file

--- a/board_game.html
+++ b/board_game.html
@@ -858,7 +858,7 @@
 
                 </div>
                  <hr class="text-light">
-                <i class="text-center text-light"><b>© Shopping Crafts. All rights reserved</b> sab page ke footer mein ..</i>
+                <i class="text-center text-light"><b>© Shopping Crafts.</b> All rights reserved</i>
             </div>
         </div>
     </section>
