--- a/sports_toy.html
+++ b/sports_toy.html
@@ -405,8 +405,9 @@
                         <p><b>Key Features:</b></p>
                         <ul>
                             <li><b>Safe & Soft Foam Base: </b>Gentle on surfaces and great for little feet. </li>
-                            <li><b>Durable Bungee Cord: </b>Flexible handle and stretchable cord for endless bouncing fun.</li>
-                            </ul>
+                            <li><b>Durable Bungee Cord: </b>Flexible handle and stretchable cord for endless bouncing
+                                fun.</li>
+                        </ul>
                         <div class="text-center">
                             <a href="#" role="button" class="button btn btn-primary mt-3" data-bs-toggle="modal"
                                 data-bs-target="#staticBackdrop">
@@ -456,13 +457,18 @@
     <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
-                <div class="col-md-4 pt-4 pb-4">
+                <div class="col-md-3 pt-4 pb-4">
                     <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
                             class="img-fluid pb-4"></a><br>
-                            <i class="text-light">Shipra is your one-stop destination for high-quality products across categories like toys, home essentials, educational tools, and more. We are committed to offering a seamless shopping experience, combining reliability, affordability, and variety. you're a parent looking for smart toys, a reseller searching for bulk deals, or a gift-giver seeking something unique, Shipra delivers trusted quality and unmatched service right to your doorstep. </i><br>
-                           
+                    <i class="text-light">Shipra is your one-stop destination for high-quality products across
+                        categories like toys, home essentials, educational tools, and more. We are committed to offering
+                        a seamless shopping experience, combining reliability, affordability, and variety. you're a
+                        parent looking for smart toys, a reseller searching for bulk deals, or a gift-giver seeking
+                        something unique, Shipra delivers trusted quality and unmatched service right to your doorstep.
+                    </i><br>
+
                 </div>
-                <div class="col-md-4 px-5 pt-4 pb-4">
+                <div class="col-md-3 px-5 pt-4 pb-4">
                     <div class="contact-form">
                         <h2><a href="products.html">Toys & Games</a></h2>
                         <ul class="list-unstyled">
@@ -477,16 +483,19 @@
                             <li class="mb-1"> <a href="puzzle.html"> Puzzle Game </a> </li>
 
                             <li class="mb-1"> <a href="building.html"> Building Blocks </a> </li>
-
-                            <li class="mb-1"><a href="sports_toy.html"> Sports Toy </a> </li>
-
-                            <li class="mb-1"> <a href="creative_toy.html"> Creative Toy </a></li>
-
-                            <li class="mb-1"> <a href="baby_toy.html"> Baby Toy</a></li>
-
-                            <li> <a href="outdoor_toy.html">Outdoor Toy</a> </li>
                         </ul>
                     </div>
+                </div>
+                <div class="col-md-2 pt-5 pb-4">
+                    <ul class="list-unstyled pt-4">
+                        <li class="mb-1"><a href="sports_toy.html"> Sports Toy </a> </li>
+
+                        <li class="mb-1"> <a href="creative_toy.html"> Creative Toy </a></li>
+
+                        <li class="mb-1"> <a href="baby_toy.html"> Baby Toy</a></li>
+
+                        <li> <a href="outdoor_toy.html">Outdoor Toy</a> </li>
+                    </ul>
                 </div>
                 <div class="col-md-4 pt-4 pb-4">
                     <h2>Contact Us</h2>
@@ -496,14 +505,13 @@
                         </div>
                         <div class="px-3">
                             <span>Mumbai, Noida , Rajkot , Surat</span><br>
-                            <a href="#"> <span>Get Directions</span>
-                                <i class="fa-solid fa-right-long text-white"></i></a>
+
                         </div>
                     </div>
                     <div class="d-flex pt-4">
 
                         <div class="pt-1">
-                            <a href="mailto:prash108nc@gmail.com">
+                            <a href=" shooppingcrafts@gmail.com">
                                 <i class="fa-solid fa-envelope contact-logo"></i>
                         </div>
                         <div class="px-3">
@@ -513,35 +521,35 @@
                     </div>
                     <div class="d-flex pt-4">
                         <div class="pt-1">
-                            <a href="tel:9175371081">
+                            <a href="tel:9579613569 ">
                                 <i class="fa-solid fa-phone contact-logo"></i>
                         </div>
                         <div class="px-3">
-                            <span>9175371081</span>
+                            <span>9579613569 </span>
                         </div>
                         </a>
                     </div>
                     <div class=" py-4 py-md-0 mt-md-4">
                         <span class="pe-3">Share:</span>
-                        <span class="contact-socialMediaIcon"><a href="#"><i
+                        <span class="contact-socialMediaIcon"><a href="https://www.facebook.com/shipraplayhouse"><i
                                     class="fa-brands fa-facebook-f"></i></a></span>
-                        <span class="contact-socialMediaIcon"><a href="#"><i
-                                    class="fa-brands fa-linkedin-in"></i></a></span>
-                        <span class="contact-socialMediaIcon"><a href="#"><i
-                                    class="fa-brands fa-x-twitter"></i></a></span>
+                        <span class="contact-socialMediaIcon"><a href="https://www.youtube.com/@shipraplayhouse"><i
+                                    class="fa-brands fa-youtube"></i></a></span>
                         <span class="contact-socialMediaIcon"><a href="https://wa.link/tlxn9m"><i
                                     class="fa-brands fa-whatsapp"></i></a></span>
                         <span class="contact-socialMediaIcon"><a href="mailto:prash108nc@gmail.com"><i
                                     class="fa-solid fa-envelope"></i></a></span>
-                        <span class="contact-socialMediaIcon"><a href="#"><i
+                        <span class="contact-socialMediaIcon"><a href=" https://www.instagram.com/shipraplayhouse/"><i
                                     class="fa-brands fa-instagram"></i></a></span>
                     </div>
 
                 </div>
-                 <hr class="text-light">
-                <i class="text-center text-light"><b>© Shopping Crafts. All rights reserved</b> sab page ke footer mein ..</i>
+                <hr class="text-light">
+                <i class="text-center text-light"><b>© Shopping Crafts. </b>All rights reserved</i>
             </div>
         </div>
+        </div>
+
     </section>
     <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
